@@ -1,3 +1,6 @@
+28-03-2011 lucas
+- Replaced the email for a valid one.
+
 24-03-2011 lucas
 - Make the test testHowToPersonAndOrganisationLinking independent of ERP5 front page.
 
